# api-santander-espelhamento

./: .env.example  .gitignore  README.md  ecosystem.config.js  main.py  pyproject.toml  pytest.ini
app/api/: dependencies.py
app/api/v1/: router.py
app/api/v1/endpoints/: agreement.py  document.py  health.py
app/core/: config.py  rabbitmq.py  security.py
app/schemas/: agreement.py  document.py  health.py
app/services/: agreement_service.py  document_service.py
models/: __init__.py  agreement.py  document.py
routes/: __init__.py  agreement.py  document.py  health.py
tests/: conftest.py
tests/api/v1/: test_agreement.py  test_document.py  test_health.py
