[project]
name = "api-santander-espelhamento"
version = "0.1.0"
description = "API para espelhamento de dados do Santander Varejo"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi[standard]>=0.135.2",
    "uvicorn>=0.25.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.13.1",
    "pika>=1.3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "httpx>=0.24.0",
]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["app", "app.api", "app.api.v1", "app.api.v1.endpoints", "app.core", "app.schemas", "app.services"]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]
